syntax = "proto3";

import "float2.proto";

package wanderer.proto;

enum SpawnpointType {
  PLAYER = 0;
  SKELETON = 1;
}

message Spawnpoint {
  optional SpawnpointType type = 1;
  optional float2 position = 2;
}