syntax = "proto3";

package wanderer.proto;

message Tileset {
  map<uint32, uint32> tile_to_entity = 1;
}