syntax = "proto3";

import "color.proto";

package wanderer.proto;

enum DayOfWeek {
  MONDAY = 0;
  TUESDAY = 1;
  WEDNESDAY = 2;
  THURSDAY = 3;
  FRIDAY = 4;
  SATURDAY = 5;
  SUNDAY = 6;
}

message TimeOfDay {
  optional float hour = 1;
  optional float minute = 2;
  optional float seconds = 3;
  optional int32 week = 4;
  optional DayOfWeek day = 5;
  optional Color tint = 6;
}
