syntax = "proto3";

package wanderer.protobuf;

message float2 {
  optional float x = 1;
  optional float y = 2;
}
